# arduino-snippets

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
docs/: index.md
docs/sensors/AHT10/: aht10-temp-humidity.md
infra/: Makefile  docker-compose.yaml
infra/config/grafana/grafana-provisioning/dashboards/: dashboard.json
infra/config/grafana/grafana-provisioning/datasources/: datasources.yaml
infra/config/mqtt/: mosquitto.conf
infra/config/telegraf/: telegraf.conf
infra/sensor_mocker/: Dockerfile  mocker.py  pyproject.toml
search/: search_index.json
sensors/AHT10/aht10-temp-humidity/: index.html
sensors/AHT10/assets/: AHT Sketch.fzz
