[tool.poetry]
name = "arduino-snippets"
version = "0.1.0"
description = ""
authors = ["darth-veitcher <1722315+darth-veitcher@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "arduino_snippets"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.3.1"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
